Version 1.3 - 2015-01-22
* Define custom action for failing payments
* Module creation