@@ -2,3 +2,5 @@
   sur un journal de paiement le mode de quittancement sur lequel basculer un
   contrat pour lequel une quittance émise et censé être payée par
   prélèvement automatique revient en rejet de prélèvement.
+
+- **Paramétrage du journal de paiement à utiliser en fonction du produit**
