@@ -10,3 +10,4 @@ depends:
     contract_insurance_invoice
 xml:
     payment.xml
+    offered.xml
