@@ -1,0 +1,7 @@
+<?xml version="1.0"?>
+<data>
+    <xpath expr="/form/notebook/page[@id='admin']/group[@id='left']/field[@name='account_for_billing']" position="after">
+        <label name="payment_journal"/>
+        <field name="payment_journal"/>
+    </xpath>
+</data>
